--- a/sztguiFeleves/Views/MainWindow.xaml
+++ b/sztguiFeleves/Views/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sztguiFeleves.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        MinHeight="600"
+        MinWidth="800"
+        Title="MainWindow" Height="600" Width="800">
+    
         
-    </Grid>
+    
 </Window>
