--- a/sztguiFeleves/Views/MainWindow.xaml
+++ b/sztguiFeleves/Views/MainWindow.xaml
@@ -8,7 +8,39 @@
         MinHeight="600"
         MinWidth="800"
         Title="MainWindow" Height="600" Width="800">
-    
-        
+
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="3*" />
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Orientation="Horizontal" Margin="10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
+            <TextBlock Text="Input File:" FontSize="18" VerticalAlignment="Center" Margin="0,0,5,0" />
+            <TextBox x:Name="InputFilePathTextBox"
+             Text="{Binding FilePath, UpdateSourceTrigger=PropertyChanged}"
+             VerticalAlignment="Center"
+             Width="600" Height="30"
+             VerticalContentAlignment="Center"
+             FontSize="16"
+             AllowDrop="True"
+             Margin="0,0,5,0" 
+             PreviewDragOver="InputFilePathTextBox_PreviewDragOver" 
+             PreviewDrop="InputFilePathTextBox_PreviewDrop"  />
+            <Button Content="Browse" Width="70" VerticalAlignment="Center" Click="BrowseButton_Click" Height="30" FontSize="14"/>
+        </StackPanel>
+
+
+    </Grid>
     
 </Window>
