--- a/sztguiFeleves/Views/MainWindow.xaml
+++ b/sztguiFeleves/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         MinHeight="600"
         MinWidth="800"
-        Title="MainWindow" Height="600" Width="800">
+        Title="Video Transcoder" Height="600" Width="800">
 
     <Window.Resources>
         <local:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
@@ -122,7 +122,7 @@
                         </ComboBox>
 
                         <!--Output Format:-->
-                        <Label Grid.Row="5" Grid.Column="0" Margin="5,0,5,0" VerticalAlignment="Center" Content="Output Format:" />
+                        <Label Grid.Row="5" Grid.Column="0" Margin="5,0,5,0" VerticalAlignment="Center" Content="File Format:" />
                         <Label Grid.Row="5" Grid.Column="1" Margin="5,0,5,0" VerticalAlignment="Center" HorizontalContentAlignment="Center" Content="{Binding OriginalOutputFormat}"  />
                         <ComboBox Grid.Row="5" Grid.Column="3" Width="Auto" Margin="5,5,5,5"
                           ItemsSource="{Binding OutputFormats}" 
@@ -247,19 +247,15 @@
         </StackPanel>
 
 
-        <StackPanel Orientation="Horizontal" Margin="40, 10, 10, 50" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3">
+        <StackPanel Orientation="Horizontal" Margin="40,10,-10,50" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3">
             <TextBlock Text="Output File Name:" FontSize="16" VerticalAlignment="Center" Margin="0,0,5,0" />
             <TextBox x:Name="OutputFileNameTextBox"
              Text="{Binding OutputFileName, UpdateSourceTrigger=PropertyChanged}"
              VerticalAlignment="Center"
-             Width="300" Height="30"
+             Width="340" Height="30"
              VerticalContentAlignment="Center"
              FontSize="14"
              Margin="0,0,5,0" />
-            <TextBlock Text="{Binding ShowOutputFileExtension}" 
-               FontSize="16" 
-               VerticalAlignment="Center" 
-               Margin="5,0,0,0" />
         </StackPanel>
 
     </Grid>
